--- a/src/components/Select/style.scss
+++ b/src/components/Select/style.scss
@@ -68,3 +68,11 @@
     }
   }
 }
+
+.error-message {
+  color: red;
+  font-size: 15px;
+  font-weight: 900;
+  margin-top: 5px;
+  margin-left: 10px;
+}
